--- a/package.json
+++ b/package.json
@@ -68,9 +68,7 @@
         "@types/node": "^7.0.43",
         "eslint": "^4.11.0",
         "typescript": "^2.6.1",
-        "vscode": "^1.1.6"
-    },
-    "dependencies": {
+        "vscode": "^1.1.6",
         "js-beautify": "^1.7.5"
     }
 }
