--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
         "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
         "eslint": "^4.11.0",
+        "js-beautify": "^1.7.5",
         "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
-        "js-beautify": "^1.7.5"
+        "vscode": "^1.1.6"
     }
 }
