--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "fmark",
     "displayName": "FMark",
     "description": "FMark plugin",
-    "version": "0.1.4",
+    "version": "0.2.0",
     "publisher": "fmark",
     "repository": "https://github.com/ymherklotz/FMark-vscode",
     "engines": {
@@ -60,10 +60,14 @@
         "test": "node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
-        "eslint": "^4.11.0",
+        "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "eslint": "^4.11.0",
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.6"
+    },
+    "dependencies": {
+        "global": "^4.3.2",
+        "vsce": "^1.37.6"
     }
 }
