--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "fmark",
     "displayName": "FMark",
     "description": "FMark plugin",
-    "version": "0.2.2",
+    "version": "0.2.9",
     "publisher": "fmark",
     "repository": "https://github.com/ymherklotz/FMark-vscode",
     "engines": {
@@ -59,11 +59,14 @@
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "node ./node_modules/vscode/bin/test"
     },
+    "dependencies": {
+        "graceful-fs": "^4.1.11",
+        "js-beautify": "^1.7.5"
+    },
     "devDependencies": {
         "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
         "eslint": "^4.11.0",
-        "js-beautify": "^1.7.5",
         "typescript": "^2.6.1",
         "vscode": "^1.1.6"
     }
